--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     </head>
     <body>
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">
+                Duckisaac
+              </a>
+            </div>
+          </div>
+        </nav>
         <div class="container">
           <div class="jumbotron">
             <h1>Bootstrap Accordion</h1>
