--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
           <div class="container-fluid">
             <div class="navbar-header">
               <a class="navbar-brand" href="#">
