--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="Bootstrap Accordion, Bootstrap Collapse">
         <meta name="description" content="Bootstrap Accordion, Bootstrap Collapse">
+        <meta name="baidu-site-verification" content="H7gNKM709k" />
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
         <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     </head>
